Bottom bar and navigational drawer in main, profile and settings is now consistent and works in every activity Added Community button on the bottom bar

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,11 @@
             android:label="@string/title_activity_add_holiday"
             android:theme="@style/Theme.K" />
         <activity
+            android:name=".Community"
+            android:exported="false"
+            android:label="@string/title_activity_add_holiday"
+            android:theme="@style/Theme.K" />
+        <activity
             android:name=".PrefChanging"
             android:exported="false" />
         <activity
