In CalendarView: Deleted add edit buttons Now when date is selected buttons for them appear under the calendar, which after clicking display information about the holiday and a button for edition of that holiday. Added missing bar at the bottom and nav menu. In Settings: Started working on administration system, the button that leads there is in setting but only visible for a dev email (has to be changed when permission levels will be added to user information)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,6 +48,9 @@
             android:name=".SignUpActivity"
             android:exported="false" />
         <activity
+            android:name=".HolidayApproval"
+            android:exported="false" />
+        <activity
             android:name=".Profile"
             android:exported="false" />
         <activity
